[package]
name = "chemistru-macro-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chemistru-elements = "0.4.0"
constants = { path = "./constants" }
map = { path = "./map" }
phf = { version = "0.11.2", features = ["macros"] }
