[package]
name = "chemistru-macro-api"
version = "0.1.0"
edition = "2021"

description = "API for chemistru macros, generating element constants and maps"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chemistru-elements = "0.5.0"
chemistru-macro-constants = "0.1.0"
chemistru-macro-map = "0.1.0"

phf = { version = "0.11.2", features = ["macros"] }
